change darkInput to dark, made icon wrapper border red on error, fixed dark mode react caption

--- a/app/pb_kits/playbook/pb_date_picker/sass_partials/_calendar_input_icon.scss
+++ b/app/pb_kits/playbook/pb_date_picker/sass_partials/_calendar_input_icon.scss
@@ -23,6 +23,9 @@
   &.no_label_shift {
     top: 0;
   }
+  &.error {
+    border-left-color: $error;
+  }
 }
 .cal_icon {
   width: $space_sm;
